fix(topbar): fixes topbar behind content

--- a/client/src/components/preview/index.scss
+++ b/client/src/components/preview/index.scss
@@ -86,6 +86,7 @@ ul.navmenu-nav a {
 #topbar {
   height: 48px;
   margin-top: -2px;
+  z-index: 2000;
 
   .if-not-scrolled {
     display: block;
